package BusinessLogic.Entities.Alimento;

public abstract class GJAlimento {
    private String gjTipo;

    public String toString() {
        return gjTipo;
    }
}
