package BusinessLogic.Entities.Alimento;

public abstract class GJGenoAlimento extends GJAlimento{

}
