package BusinessLogic.Entities.Alimento;

public abstract class GJIngestaNativa extends GJAlimento{

}
