package BusinessLogic.Entities.Alimento;

public class GJXY extends GJGenoAlimento{
    String gjTipo;
    
    public GJXY() {
        gjTipo = "XY";
    }

    public String toString() {
        return gjTipo;
    }
}
